<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <EditText
        android:id="@+id/azimuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/azimuth_hint"
        android:inputType="numberDecimal"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/pitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/pitch_hint"
        android:inputType="numberDecimal"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/roll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/roll_hint"
        android:inputType="numberDecimal"
        tools:ignore="Autofill" />


</LinearLayout>